# sake_image_retrieval

./: .gitignore  README.md  pyproject.toml
environments/: create_retrieval_env.sh  create_template_env.sh
src/: config.py  dataset.py  eda.py  main.py  model.py  retrieval.py  retrieval_utils.py  train.py
